tests/algorithms/x/C/linear_programming/simplex.c
// Generated by Mochi 0.10.32 on 2025-08-16 11:14 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>
#include <math.h>

size_t pivot_len;
size_t *pivot_lens;
size_t findPivot_len;
size_t simplex_len;
size_t *simplex_lens;

size_t append_len;
static int contains_str(const char *arr[], size_t len, const char *val) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(arr[i], val) == 0) return 1;
    }
    return 0;
}

static char* str_concat(const char *a, const char *b) {
    size_t len1 = strlen(a);
    size_t len2 = strlen(b);
    char *res = malloc(len1 + len2 + 1);
    memcpy(res, a, len1);
    memcpy(res + len1, b, len2);
    res[len1 + len2] = 0;
    return res;
}

static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_float(double v) {
    char buf[64];
    snprintf(buf, sizeof(buf), "%f", v);
    char *p = buf + strlen(buf) - 1;
    while (p > buf && *p == '0') *p-- = '\0';
    if (p > buf && *p == '.') *p = '\0';
    return strdup(buf);
}

typedef struct { const char **keys; double *vals; size_t len; size_t cap; } MapSD;

static double map_get_sd(const char *keys[], const double vals[], size_t len, const char *key) {
    for (size_t i = 0; i < len; i++) {
        if (strcmp(keys[i], key) == 0) return vals[i];
    }
    return 0;
}

static double* list_append_double(double *arr, size_t *len, double val) {
    arr = realloc(arr, (*len + 1) * sizeof(double));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

double tableau_0[5] = {-1LL, -1LL, 0LL, 0LL, 0LL};
double tableau_1[5] = {1LL, 3LL, 1LL, 0LL, 4LL};
double tableau_2[5] = {3LL, 1LL, 0LL, 1LL, 4LL};
double *tableau_init[3] = {tableau_0, tableau_1, tableau_2};
double **tableau = tableau_init;
size_t tableau_len = 3;
size_t tableau_lens_init[3] = {5, 5, 5};
size_t *tableau_lens = tableau_lens_init;
size_t tableau_lens_len = 3;
double **finalTab = NULL;
size_t finalTab_len = 0;
size_t *finalTab_lens = NULL;
size_t finalTab_lens_len = 0;
MapSD res = (MapSD){0};

double * * pivot(double * * t, size_t t_len, size_t* t_lens, size_t t_lens_len, long long row, long long col);
long long * findPivot(double * * t, size_t t_len, size_t* t_lens, size_t t_lens_len);
MapSD interpret(double * * t, size_t t_len, size_t* t_lens, size_t t_lens_len, long long nVars);
double * * simplex(double * * tab, size_t tab_len, size_t* tab_lens, size_t tab_lens_len);
int main(void);

double * * pivot(double * * t, size_t t_len, size_t* t_lens, size_t t_lens_len, long long row, long long col) {
    double *pivotRow = NULL;
    size_t pivotRow_len = 0;
    double pivotVal = t[(int)({long long _mochi_idx = row; _mochi_idx < 0 ? t_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = col; _mochi_idx < 0 ? t_lens[row] + _mochi_idx : _mochi_idx;})];
    for (int j = 0LL; j < t_lens[row]; j++) {
        pivotRow = list_append_double(pivotRow, &pivotRow_len, t[(int)({long long _mochi_idx = row; _mochi_idx < 0 ? t_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = j; _mochi_idx < 0 ? t_lens[row] + _mochi_idx : _mochi_idx;})] / pivotVal);
    }
    t[(int)(row)] = pivotRow;
    for (int i = 0LL; i < t_len; i++) {
        if (i != row) {
            double factor = t[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? t_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = col; _mochi_idx < 0 ? t_lens[i] + _mochi_idx : _mochi_idx;})];
            double *newRow = NULL;
            size_t newRow_len = 0;
            for (int j = 0LL; j < t_lens[i]; j++) {
                double value = t[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? t_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = j; _mochi_idx < 0 ? t_lens[i] + _mochi_idx : _mochi_idx;})] - (factor * pivotRow[(int)({long long _mochi_idx = j; _mochi_idx < 0 ? pivotRow_len + _mochi_idx : _mochi_idx;})]);
                newRow = list_append_double(newRow, &newRow_len, value);
            }
            t[(int)(i)] = newRow;
        }
    }
    return pivot_lens = t_lens, pivot_len = t_len, t;
}

long long * findPivot(double * * t, size_t t_len, size_t* t_lens, size_t t_lens_len) {
    long long col = 0LL;
    double minVal = 0LL;
    for (int j = 0LL; j < t_lens[0LL] - 1LL; j++) {
        double v = t[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? t_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = j; _mochi_idx < 0 ? t_lens[0LL] + _mochi_idx : _mochi_idx;})];
        if (v < minVal) {
            minVal = v;
            col = j;
        }
    }
    if (minVal >= 0LL) {
        {
            long long* __tmp0_data = malloc(2 * sizeof(long long));
            __tmp0_data[0] = -1LL;
            __tmp0_data[1] = -1LL;
            findPivot_len = 2;
            return __tmp0_data;
        }
    }
    double row = -1LL;
    double minRatio = 0LL;
    long long first = 1LL;
    for (int i = 1LL; i < t_len; i++) {
        double coeff = t[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? t_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = col; _mochi_idx < 0 ? t_lens[i] + _mochi_idx : _mochi_idx;})];
        if (coeff > 0LL) {
            double rhs = t[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? t_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = t_lens[i] - 1LL; _mochi_idx < 0 ? t_lens[i] + _mochi_idx : _mochi_idx;})];
            double ratio = rhs / coeff;
            if (first || (ratio < minRatio)) {
                minRatio = ratio;
                row = i;
                first = 0LL;
            }
        }
    }
    {
        long long* __tmp1_data = malloc(2 * sizeof(long long));
        __tmp1_data[0] = row;
        __tmp1_data[1] = col;
        findPivot_len = 2;
        return __tmp1_data;
    }
}

MapSD interpret(double * * t, size_t t_len, size_t* t_lens, size_t t_lens_len, long long nVars) {
    long long lastCol = t_lens[0LL] - 1LL;
    double p = t[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? t_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = lastCol; _mochi_idx < 0 ? t_lens[0LL] + _mochi_idx : _mochi_idx;})];
    if (p < 0LL) {
        p = -(p);
    }
    static const char* result_keys[16] = {};
    static double result_vals[16] = {};
    size_t result_len = 0;
    result[(int)("P")] = p;
    for (int i = 0LL; i < nVars; i++) {
        double nzRow = -1LL;
        long long nzCount = 0LL;
        for (int r = 0LL; r < t_len; r++) {
            double val = t[(int)({long long _mochi_idx = r; _mochi_idx < 0 ? t_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = i; _mochi_idx < 0 ? t_lens[r] + _mochi_idx : _mochi_idx;})];
            if (val != 0LL) {
                nzCount = nzCount + 1LL;
                nzRow = r;
            }
        }
        if ((nzCount == 1LL) && (t[(int)({long long _mochi_idx = nzRow; _mochi_idx < 0 ? t_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = i; _mochi_idx < 0 ? t_lens[nzRow] + _mochi_idx : _mochi_idx;})] == 1LL)) {
            result[(int)(str_concat("x", str_int(i + 1LL)))] = t[(int)({long long _mochi_idx = nzRow; _mochi_idx < 0 ? t_len + _mochi_idx : _mochi_idx;})][(int)({long long _mochi_idx = lastCol; _mochi_idx < 0 ? t_lens[nzRow] + _mochi_idx : _mochi_idx;})];
        }
    }
    return result;
}

double * * simplex(double * * tab, size_t tab_len, size_t* tab_lens, size_t tab_lens_len) {
    double **t = tab;
    size_t t_len = tab_len;
    size_t *t_lens = tab_lens;
    size_t t_lens_len = tab_len;
    while (1LL) {
        long long *p = findPivot(t, t_len, t_lens, t_len);
        size_t p_len = findPivot_len;
        long long row = p[(int)({long long _mochi_idx = 0LL; _mochi_idx < 0 ? p_len + _mochi_idx : _mochi_idx;})];
        long long col = p[(int)({long long _mochi_idx = 1LL; _mochi_idx < 0 ? p_len + _mochi_idx : _mochi_idx;})];
        if (row < 0LL) {
            break;
        }
        t = pivot(t, t_len, t_lens, t_len, row, col);
        t_len = pivot_len;
        t_lens = pivot_lens;
    }
    return simplex_lens = t_lens, simplex_len = t_len, t;
}

int main(void) {
    {
        long long __start = _now();
        finalTab = simplex(tableau, tableau_len, tableau_lens, tableau_len);
        finalTab_len = simplex_len;
        finalTab_lens = simplex_lens;
        res = interpret(finalTab, finalTab_len, finalTab_lens, finalTab_len, 2LL);
        puts(str_concat("P: ", str_float(map_get_sd(res.keys, res.vals, res.len, "P"))));
        for (int i = 0LL; i < 2LL; i++) {
            const char* key = str_concat("x", str_int(i + 1LL));
            if (contains_str(res.keys, res.len, key)) {
                puts(str_concat(str_concat(key, ": "), str_float(map_get_sd(res.keys, res.vals, res.len, key))));
            }
        }
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
